--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0-rc.1",
+    "@angular/cdk": "^15.2.2",
     "@angular/common": "^15.0.0-rc.1",
     "@angular/compiler": "^15.0.0-rc.1",
     "@angular/core": "^15.0.0-rc.1",
@@ -44,6 +45,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.0",
-    "typescript": "~4.8.0"
+    "typescript": "~4.9.4"
   }
 }
